--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Justin's Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/doenjang_jiigae.html"> Doenjang Jiigae</a>
+    <ul>
+        <li><a href="recipes/doenjang_jiigae.html"> Doenjang Jiigae</a></li>
+
+
+    </ul>
+    
 </body>
 </html>
