--- a/recipes/doenjang_jiigae.html
+++ b/recipes/doenjang_jiigae.html
@@ -1,1 +1,24 @@
-<h1>Doenjang Jiigae</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doenjang Jiigae</title>
+   
+</head>
+<body>
+    <h1>Doenjang Jiigae</h1>
+    <img src="../images/doenjangjiigae.jpg">
+    <h1>Description</h1>
+    <h1>Ingredients</h1>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    <h1>Steps</h1>
+        <ol>
+            <li></li>
+        </ol>    
+</body>
+</html>
